Layout changes on Landing Page of Adiyogini.

--- a/Using Basic Technologies/index.html
+++ b/Using Basic Technologies/index.html
@@ -33,12 +33,12 @@
         <div class="hero-container">
             <div class="hero-item1">
                 <!-- <img src="assets/img/leaf1.png" height="200px" alt=""> -->
-                <img src="assets/img/logo.png" height="200px" width="200px" alt="logo">
+                <img src="assets/img/hero1.png" height="300px" width="300px" alt="logo">
                 <h1>Welcome to Adiyogini</h1>
                 <p>Discover the path to holistic well-being through the ancient wisdom of yoga.</p>
             </div>
             <div class="hero-item2">
-                <img src="assets/img/hero1.png" height="600px" alt="">
+                <!-- <img src="assets/img/logo.png" height="600px" alt=""> -->
             </div>
             <div class="hero-item3">
                 <img src="assets/img/red-leaf.png" height="600px">
