--- a/Using Basic Technologies/index.html
+++ b/Using Basic Technologies/index.html
@@ -35,13 +35,13 @@
                 <!-- <img src="assets/img/leaf1.png" height="200px" alt=""> -->
                 <img src="assets/img/hero1.png" height="300px" width="300px" alt="logo">
                 <h1>Welcome to Adiyogini</h1>
-                <p>Discover the path to holistic well-being through the ancient wisdom of yoga.</p>
+                <p>Dive into educational content on Yogic Science, Yogic Textures, and integrated knowledge of Biology.</p>
             </div>
             <div class="hero-item2">
                 <!-- <img src="assets/img/logo.png" height="600px" alt=""> -->
             </div>
             <div class="hero-item3">
-                <img src="assets/img/red-leaf.png" height="600px">
+                <img src="assets/img/logo-removebg-preview.png" height="600px">
             </div>
             <div class="hero-item4">
                 <h1>Our Mission</h1>
