Changed Layout of Landing Page

--- a/Using Basic Technologies/index.html
+++ b/Using Basic Technologies/index.html
@@ -34,14 +34,14 @@
             <div class="hero-item1">
                 <!-- <img src="assets/img/leaf1.png" height="200px" alt=""> -->
                 <img src="assets/img/hero1.png" height="300px" width="300px" alt="logo">
-                <h1>Welcome to Adiyogini</h1>
+                <h1 class="type-text">Welcome to Adiyogini</h1>
                 <p>Dive into educational content on Yogic Science, Yogic Textures, and integrated knowledge of Biology.</p>
             </div>
             <div class="hero-item2">
                 <!-- <img src="assets/img/logo.png" height="600px" alt=""> -->
             </div>
             <div class="hero-item3">
-                <img src="assets/img/logo-removebg-preview.png" height="600px">
+                <img src="assets/img/logo-removebg-preview.png">
             </div>
             <div class="hero-item4">
                 <h1>Our Mission</h1>
