Made website responsive using media queries

--- a/Using Basic Technologies/index.html
+++ b/Using Basic Technologies/index.html
@@ -15,7 +15,7 @@
             <div class="nav-logo">
                 <h1>Adiyogini</h1>
             </div>
-            <div class=""nav-links>
+            <div class="nav-links">
                 <a href="">Home</a>
                 <a href="">About Us</a>
                 <a href="">Programs</a>
@@ -30,32 +30,34 @@
         </nav>
     </header>
     <main>
-        <div class="hero-container">
-            <div class="hero-item1">
+        <section class="landing-section">
+            <div class="landing-item1">
                 <!-- <img src="assets/img/leaf1.png" height="200px" alt=""> -->
                 <img src="assets/img/hero1.png" height="300px" width="300px" alt="logo">
                 <h1 class="type-text">Welcome to Adiyogini</h1>
                 <p>Dive into educational content on Yogic Science, Yogic Textures, and integrated knowledge of Biology.</p>
             </div>
-            <div class="hero-item2">
+            <div class="landing-item2">
                 <!-- <img src="assets/img/logo.png" height="600px" alt=""> -->
-            </div>
-            <div class="hero-item3">
+            </div>            
+        </section>
+        <section class="mission-section">
+            <div class="mission-item1">
                 <img src="assets/img/logo-removebg-preview.png">
             </div>
-            <div class="hero-item4">
+            <div class="mission-item2">
                 <h1>Our Mission</h1>
                 <p>At Adiyogini Art of Union, our mission is to empower individuals through the transformative power of yogic science. We aim to educate people on the theoretical aspects of yogic science, including anatomy and physiology, and provide practical techniques for physical and mental well-being.</p>
                 <p>We are dedicated to helping women achieve their beauty goals and address specific health issues such as PCOD, PCOS, thyroid imbalances, and hormonal disturbances. Through face yoga, natural DIYs, exercises, pranayama, yoga asanas, and meditation, we support women in becoming healthier and more beautiful from the inside out.</p>
                 <p>By integrating traditional yogic practices with modern approaches, we strive to enhance life balance and health for all our participants, ensuring they benefit from a comprehensive and logical approach to yoga.</p>
-            </div>            
-        <!-- </div>
-        <div class="about-us">
+            </div>
+        </section>
+        <!-- <div class="about-us">
         </div>
         <div class="programs">
         </div>
         <div class="tutorials"></div>
-        <div class="vistar"></div> -->
+        <div class="vistar"></div>  -->
     </main>
     <footer>
         
