Improved navbar by adding icons from font awesome toolkit

--- a/Using Basic Technologies/index.html
+++ b/Using Basic Technologies/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=\, initial-scale=1.0">
     <title>Adiyogini(Art Of Union)</title>
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap');
-        </style>
+    </style>
 </head>
 <body>
     <header>
@@ -16,12 +17,21 @@
                 <h1>Adiyogini</h1>
             </div>
             <div class="nav-links">
-                <a href="">Home</a>
+                <ul>
+                    <li class="active"><i class="fa-solid fa-house"></i></i><a href="">Home</a></li>
+                    <li><i class="fa-solid fa-address-card"></i><a href="">About Us</a></li>
+                    <li><i class="fa-solid fa-folder-open"></i><a href="">Programs</a></li>
+                    <li><i class="fa-solid fa-person-chalkboard"></i><a href="">Tutorials</a></li>
+                    <li><i class="fa-solid fa-layer-group"></i><a href="">Vistar</a></li>
+                    <li><i class="fa-solid fa-phone"></i><a href="">Contact Us</a></li>
+
+                </ul>
+                <!-- <a href="">Home</a>
                 <a href="">About Us</a>
                 <a href="">Programs</a>
                 <a href="">Tutorials</a>
                 <a href="">Vistar</a>
-                <a href="">Contact Us</a>
+                <a href="">Contact Us</a> -->
                 <!-- <a href=""><button>Sign Up</button></a> -->
             </div>
             <div class="nav-signup">
